--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.1.3",
-		"styled-components": "4.4.0"
+		"styled-components": "4.4.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.4",
@@ -66,11 +66,11 @@
 		"@types/i18n-js": "^3.0.1",
 		"@types/jest": "^24.0.24",
 		"@types/lodash": "^4.14.149",
-		"@types/react-native": "^0.62.0",
+		"@types/react-native": "^0.62.2",
 		"@types/react-redux": "^7.1.7",
 		"@types/react-test-renderer": "16.9.2",
 		"@types/redux-logger": "^3.0.7",
-		"@types/styled-components": "4.4.0",
+		"@types/styled-components": "4.4.3",
 		"@typescript-eslint/eslint-plugin": "^2.27.0",
 		"@typescript-eslint/parser": "^2.27.0",
 		"eslint": "^6.5.1",
@@ -80,7 +80,7 @@
 		"metro-react-native-babel-preset": "^0.59.0",
 		"prettier": "^2.0.4",
 		"react-test-renderer": "16.13.1",
-		"typescript": "^3.8.3"
+		"typescript": "4.1.3"
 	},
 	"jest": {
 		"preset": "react-native",
