--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
 		"react-native-gesture-handler": "^1.8.0",
 		"react-native-linear-gradient": "^2.5.6",
 		"react-native-localize": "^1.3.4",
+		"react-native-modalize": "^2.0.8",
+		"react-native-portalize": "^1.0.7",
 		"react-native-reanimated": "^1.13.0",
 		"react-native-safe-area-context": "^3.1.8",
 		"react-native-screens": "2.11.0",
 		"react-native-vector-icons": "^7.1.0",
+		"react-native-webview": "^11.0.3",
 		"react-redux": "^7.2.0",
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
