--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-native-modalize": "^2.0.8",
 		"react-native-portalize": "^1.0.7",
 		"react-native-reanimated": "^1.13.0",
+		"react-native-restart": "0.0.20",
 		"react-native-safe-area-context": "^3.1.8",
 		"react-native-screens": "2.11.0",
 		"react-native-vector-icons": "^7.1.0",
